REPORT: Fix citations.

--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -42,25 +42,25 @@
 }
 
 @inproceedings{Kolter,
-  title={Approximate inference in additive factorial hmms with application to energy disaggregation},
-  author={Kolter, J Zico and Jaakkola, Tommi},
-  booktitle={International conference on artificial intelligence and statistics},
-  pages={1472--1482},
-  year={2012}
+  title="Approximate inference in additive factorial hmms with application to energy disaggregation",
+  author="Kolter, J Zico and Jaakkola, Tommi",
+  booktitle="International conference on artificial intelligence and statistics",
+  pages="1472--1482",
+  year="2012"
 }
 
 @article{Parson,
-  title={Non-intrusive load monitoring using prior models of general appliance types},
-  author={Parson, Oliver and Ghosh, Siddhartha and Weal, Mark and Rogers, Alex},
-  year={2012}
+  title="Non-intrusive load monitoring using prior models of general appliance types",
+  author="Parson, Oliver and Ghosh, Siddhartha and Weal, Mark and Rogers, Alex",
+  year="2012"
 }
 
 @inproceedings{Weiss,
-  title={Leveraging smart meter data to recognize home appliances},
-  author={Weiss, Markus and Helfenstein, Adrian and Mattern, Friedemann and Staake, Thorsten},
-  booktitle={Pervasive Computing and Communications (PerCom), 2012 IEEE International Conference on},
-  pages={190--197},
-  year={2012},
+  title="Leveraging smart meter data to recognize home appliances",
+  author="Weiss, Markus and Helfenstein, Adrian and Mattern, Friedemann and Staake, Thorsten",
+  booktitle="Pervasive Computing and Communications (PerCom), 2012 IEEE International Conference on",
+  pages="190--197",
+  year="2012",
   organization={IEEE}
 }
 
