--- a/report/report.tex
+++ b/report/report.tex
@@ -327,7 +327,8 @@ Extension to Baranski's Algorithm?.
 HMM depending on how well that goes
 
 % Generate the bibliography.
+
 \bibliography{biblio}
-\bibliographystyle{unsrt}
+\bibliographystyle{aaai}
 
 \end{document}
