REPORT: Reword NILM description.

--- a/report/report.tex
+++ b/report/report.tex
@@ -41,7 +41,7 @@ NOTE: sub-metering is the word we want for measuring disaggregated energy signal
 
 \section{Introduction}
 
-Energy disaggregation (or NILM, non-intrusive load-monitoring) is the problem of estimating individual appliance energy consumption from a single measure of an entire household's energy consumption.
+Energy disaggregation, or non-intrusive load-monitoring (NILM), is the problem of estimating a household's individual appliance energy consumption given measurements from a single sensor which records the aggregate power consumption of the household over time.
 Studies have shown people are motivated to save energy when given knowledge of appliance energy consumption \cite{Darby}.
 Faulty devices could also be identified by abnormal energy consumption.
 
