REPORT: Add citation for UK-DALE dataset.

--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -13,6 +13,13 @@
 	conference = "BuildSys'15"
 }
 
+@article{ Kelly2,
+        author = "Jack Kelly, William Knottenbelt",
+        title = "The UK-DALE Dataset, Domestic Appliance-Level Electricity Demand and Whole-House Demand From Five UK Homes",
+        year = "2015",
+        journal = "Scientific Data"
+}
+
 @techreport{ Hart1,
 	author = "George Hart",
 	title = "Prototype Nonintrusive Appliance Load Monitor",
