REPORT: Change abstract to use begin/end

--- a/report/report.tex
+++ b/report/report.tex
@@ -28,10 +28,10 @@
 
 \maketitle
 
-\abstract{
+\begin{abstract}
 Whatever we exactly did. Something about how, for Internet of Things, device on/off is more readily available
 Would be very useful if could train off it combined with the aggregated data, rather than also using the disaggregated data or taking an unsupervised approach.
-}
+\end{abstract}
 
 NOTE: Needs to be cleaned up now
 NOTE: sub-metering is the word we want for measuring disaggregated energy signals
