--- a/report/report.tex
+++ b/report/report.tex
@@ -49,7 +49,7 @@ Having access to disaggregated energy consumption is useful to homeowners, as st
 Additionally, this information can be used to identify devices in a home which have become faulty and are in need of repair.
 When a device breaks, changes in its energy consumption patterns can be detected by an automated system, allowing the homeowner to be notified that the device needs servicing.
 
-Most existing machine learning methodologies for NILM are trained using data from households which have been instrumented to record the power consumption of each device separately, in addition to the aggregate household power usage \cite{Kelly, Cicchetti}.
+Most existing machine learning methodologies for NILM are trained using data from households which have been instrumented to record the power consumption of each device separately, in addition to the aggregate household power usage \cite{Kelly}\cite{Cicchetti}.
 However, as noted above, this instrumentation is expensive and makes it difficult to gather new data, with most existing datasets being limited to recording from only a small number of homes \cite{Redd}\cite{Kelly2}.
 This lack of data from many homes has the effect of making it difficult to see how well current NILM algorithms generalize to unseen homes, and can be problematic with algorithms which require large amounts of data, such as deep neural network architectures \cite{Kelly}.
 
@@ -58,7 +58,7 @@ This lack of data from many homes has the effect of making it difficult to see h
 **May not be correct** Due to the diversity of devices, both which are used in a house and their power consumption, it can be difficult to generalize from one house to another.
 
 %TODO: List of a few papers that require this. Include all that we are referencing at other spots and that do this
-Many existing methodologies for NILM require the aggregated energy usage for a house and the energy usage for each appliance of interest during the same time period \cite{Kelly, Cicchetti}. 
+Many existing methodologies for NILM require the aggregated energy usage for a house and the energy usage for each appliance of interest during the same time period \cite{Kelly}\cite{Cicchetti}.
 %TODO: Find paper that references this. Also, sentence should be better
 However, recording the energy usage for each device is difficult, due to the requirement of adding sensors to each device.
 With the increase in the Internet of Things, we expect that more devices will be able to indicate when they are using power to the server.
