REPORT: Fix multiple authors in Kelly articles.

--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -6,7 +6,7 @@
 }
 
 @article{ Kelly,
-	author = "Jack Kelly, William Knottenbelt",
+	author = "Jack Kelly and William Knottenbelt",
 	title = "Neural NILM: Deep Neural Networks Applied to Energy Disaggregation",
 	year = "2015",
 	organization = "ACM",
@@ -14,7 +14,7 @@
 }
 
 @article{ Kelly2,
-        author = "Jack Kelly, William Knottenbelt",
+        author = "Jack Kelly and William Knottenbelt",
         title = "The UK-DALE Dataset, Domestic Appliance-Level Electricity Demand and Whole-House Demand From Five UK Homes",
         year = "2015",
         journal = "Scientific Data"
