REPORT: Add Internet of Things reference to bibliography.

--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -20,6 +20,15 @@
         journal = "Scientific Data"
 }
 
+@article{ Gubbi,
+        author = "Jayavardhana Gubbi and Rajkumar Buyya and Slaven Marusic and Marimuthu Palaniswami",
+        title = "Internet of Things (IoT): A vision, architectural elements, and future directions",
+        year = "2013",
+        journal = "Future Generation Computer Systems",
+        volume = "29",
+        pages = "1645-1660"
+}
+
 @techreport{ Hart1,
 	author = "George Hart",
 	title = "Prototype Nonintrusive Appliance Load Monitor",
