Neural Network report section.

--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -89,6 +89,14 @@
   year={2011},
 }
 
+@inproceedings{Ruzzelli,
+author={Ruzzelli, A.G. and Nicolas, C. and Schoofs, A. and O'Hare, G.M.P.},
+booktitle={Sensor Mesh and Ad Hoc Communications and Networks (SECON), 2010 7th Annual IEEE Communications Society Conference on},
+title={Real-Time Recognition and Profiling of Appliances through a Single Electricity Sensor},
+year={2010},
+pages={1-9},
+month={June},}
+
 
 Low Layer Neural Networks
 
