--- a/report/report.tex
+++ b/report/report.tex
@@ -150,40 +150,11 @@ F-scores of 80\% and higher for some devices although the strong assumption we a
 
 %**Another interesting aspect of the paper was how they used Denoising Autoencoders.
 ​
-\subsubsection{Deep Recurrent Neural Networks}
-​
-A standard recurrent neural network with $t$ layers assumes a statistical model is parameterized by matrices $A,B$ and $C$ and a bias vector $b$, where if $x = (x_1, \dots, x_n)$ is observed, then our output $y$ is generated iteratively by the equations
-%
-\[ h_t = \sigma(A h_{t-1} + B x + b) \]
-%
-\[ y = C h_N \]
-%
-We feed our data through the neural network $N$ times before generating the output.
-It may be of interest to use Long short-term memory architectures, defining $h_t$ instead by
-%
-\[ I_t = \sigma(Ax + B h_{t-1} + C c_{t-1} + b_1) \]
-%
-\[ F_t = \sigma(Dx + E h_{t-1} + F c_{t-1} + b_2) \]
-%
-\[ c_t = F_t c_{t-1} + I_t \tanh(G x + H h_{t-1} + b_3) \]
-%
-\[ o_t = \sigma(K x + L h + M c_t + b_4) \]
-%
-\[ h_t = o_t \tanh(c_t) \]
-​
-Bidirectional networks use forward and backward sequences, which compute ...
-​
-What's nice about these types of neural networks is that we can analyze them as a dynamical system -- which matches up nicely as viewing pre-training as a dynamical system!
-
-Used in \cite{Kelly}.
-
 \subsubsection{Baranski's Algorithm}
 
-\subsubsection{Denoising Autoencoders}
-
-Again, used in \cite{Kelly}.
-%TODO: What is good/bad about them
-
+\subsubsection{Neural Networks}
+​
+Another approach that has been used in energy disaggregation is neural networks. For example, \cite{Ruzzelli} used simple, three-layer neural networks on the problem but used more information than we had about the appliances as input, including information about the current and voltage. We did not pursue this technique since, with just the power consumption as input, the main way to distinguish appliances is via patterns over time and a simple neural network has no way to do this. Another type of neural network which is an obvious choice for this problem and which we initially considered using is deep, recurrent networks. This method had been tried  before by \cite{Kelly} which experimented with using recurrent neural networks for energy disaggregation. Its net used a bidirectional long short term memory architecture \cite{Kelly}, which involves a memory unit with input, output, and feedback gates and is intended to overcome the problem of vanishing gradients over long sequences of inputs. Although the recurrent neural network produced reasonable results with recall and precision scores of 0.85 and 0.36, \cite{Kelly} experimented with several types of neural networks, and this one did not produce the best results. In particular it performed poorly on appliances with more than the two, on/off states. The neural network we used, which falls into a category called denoising autoencoders, was based on another of the nets \cite{Kelly} tested which outperformed the recurrent neural network.
 
 
 \section{Our Stuff}
@@ -214,13 +185,25 @@ standby mode. To generate the  on/off-indicators we check the dataset against a 
 consumption in the regarding time step exceeds the threshhold and considering the device as inactive otherwise, assigning $0$. Using the threshold 
 eliminates the uninteresting phases of permant standby uses, as they are common especially in refridgerators.
 
+\subsubsection{Denoising Autoencoders}
+
+The neural network we used, as mentioned above, belongs to a type called denoising autoencoders and is based on the one from \cite{Kelly}. An autoencoder is a type of neural network with input and output layers the same size and a smaller hidden layer between them where the input and the target are the same. As a result the output of the hidden layer is effectively a compressed encoding of the original data. A denoising autoencoder is one where the input is a corrupted version of the signal, and the output is checked against the uncorrupted version. They are typically used to remove grain and noise from photos and sound recordings. 
+Denoising autoencoders can be applied to energy disaggregation by using a separate neural network for every appliance and using the power consumption over an extended window of time as both the input and the output. The input or corrupted signal is a vector of size T giving the aggregated power consumption over a time window of length T, and the target or uncorrupted signal is another vector giving the power consumption of one appliance over the same window, so the other appliances in the aggregated power usage are treated as noise \cite{Kelly}. Using the power over a time window as input is why it is able to recognise patterns in power consumption over time without being a recurrent neural net.
+
+Having discussed denoising autoencoders in general, we move on to the details of the neural networks we used. Each appliance had its own network as mentioned above, and each of them had six layers. The size of the input window was customized to how long each appliance was turned on, on average, so the input layer varied in size between the networks. After the input window was a convolutional layer with eight filters of size four. The third and fifth layers were both dense layers the same size as the output of the first convolutional layer with a smaller dense layer of 128 nodes between them. These three layers are what make up the actual denoising autoencoder. The final layer was a second convolutional one with one filter of size four \cite{Kelly}. The final layer treats its input as eight dimensional rather than one, and so reverses the increase in the size of the layers caused by the eight filters of the first convolutional layer, and compresses the output back down to the correct size to be compared to the target.
+
+We also standardized the input before running the neural network. Every input window had its mean subtracted. This does lose some information, but experiments, both our own and \cite{Kelly}'s, suggest that neural networks generalize better when each sequence is centered separately and that the gains from this outweigh loses from throwing away the information about the average value. Also every sample was divided by the standard deviation of a random sample of the input, and the target output was divided by the maximum power demand of the device to put it in the range of 0 to 1 \cite{Kelly}. 
+
+The paper comparing neural networks shows the denoising autoencoder as having a recall score of 94 and a precision score of 56 \cite{Kelly}. Before we ran our experiment based on just the on/off binary information, we ran our denoising autoencoder with the actual disaggregated power consumption as the target output on the REDD dataset attempting to get numbers close to these ones to test that our neural network was working correctly.
+
+
 \section{Preprocessing}
 ​
 Robust evaluation metrics are essential to applying supervised learning techniques. Unfortunately, obtaining reasonable metrics is near impossible without actual power outputs of individual devices. Nonetheless, we are still interested in applying supervised approaches, which have a strong history of success in energy disaggregation. Our solution estimates individual outputs on the training data, as a preprocessing step to train a more powerful prediction algorithm. We emphasize that as a general prediction method, the preprocessing algorithms we describe are not viable, since after the training phase we have no access to device on/off indicators, which are key in obtaining power output.
 ​
 Inferring general power outputs is an underdetermined problem. Good results can therefore only be obtained by making strict assumptions about the statistical model producing the data. Here, we apply two separate models: The simplest assumes that good estimates are obtained from a constant power estimate, the second that each device is represented by a restricted family of markov processes.
 ​
-In the sequel, the following notation will be convinient. We shall let $N$ denote the number of devices we are observing, and $T$ the number of time epochs. The random variable $X_i^t$ models the output of the device $i$ at the time $t$, and $Y^t = \sum X_i^t$ denotes the total power output. We observe the indicators $I_i^t = \mathbf{I}(X_i^t > 0)$ and $Y^t$ over the range of $i$ and $t$, and must predict the $X_i^t$ to the best of our ability.
+In the sequel, the following notation will be convenient. We shall let $N$ denote the number of devices we are observing, and $T$ the number of time epochs. The random variable $X_i^t$ models the output of the device $i$ at the time $t$, and $Y^t = \sum X_i^t$ denotes the total power output. We observe the indicators $I_i^t = \mathbf{I}(X_i^t > 0)$ and $Y^t$ over the range of $i$ and $t$, and must predict the $X_i^t$ to the best of our ability.
 ​
 \subsection{A Constant Power Assumption}
 ​
@@ -324,6 +307,8 @@ accuracy as the ratio with summed up overall consumption.
 Extension to Baranski's Algorithm?.
 
 HMM depending on how well that goes
+
+Another possible extension to this project would be to add more information to the input of the neural network, such as the time of day and day of the week of the input window since certain appliances are more likely to be activated at certain times. Another option would be to find a way to include the information of what the mean of the input window was while still standardizing each input window by subtracting its mean\cite{Kelly}, perhaps by standardizing the power consumption used as the input and then adding the mean as a single number at the end of the input. However, it is not easy to see where the best place to insert this information into the denoising autoencoder architecture would be. Some experimentation would likely be necessary to find an architecture that made effective use of the new information.
 
 % Generate the bibliography.
 
