--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -97,6 +97,54 @@ year={2010},
 pages={1-9},
 month={June},}
 
+@MISC{Theano,
+        author = {Bastien, Fr{\'{e}}d{\'{e}}ric and Lamblin, Pascal and
+                  Pascanu, Razvan and Bergstra, James and Goodfellow, Ian
+                  J. and Bergeron, Arnaud and Bouchard, Nicolas and Bengio,
+                  Yoshua},
+        title = {Theano: new features and speed improvements},
+        year = {2012},
+        howpublished = {Deep Learning and Unsupervised Feature Learning NIPS 2012 Workshop},
+        abstract = {Theano is a linear algebra compiler that optimizes a user’s
+                  symbolically-speciﬁed mathematical computations to produce
+                  efﬁcient low-level implementations. In this paper, we present
+                  new features and efﬁciency improvements to Theano, and
+                  benchmarks demonstrating Theano’s performance relative to
+                  Torch7, a recently introduced machine learning library, and
+                  to RNNLM, a C++ library targeted at recurrent neural
+                  networks.}
+}
+
+@INPROCEEDINGS{Theano2,
+        author = {Bergstra, James and Breuleux, Olivier and Bastien,
+                  Fr{\'{e}}d{\'{e}}ric and Lamblin, Pascal and Pascanu, Razvan
+                  and Desjardins, Guillaume and Turian, Joseph and
+                  Warde-Farley, David and Bengio, Yoshua},
+        month = jun,
+        title = {Theano: a {CPU} and {GPU} Math Expression Compiler},
+        booktitle = {Proceedings of the Python for Scientific Computing Conference ({SciPy})},
+        year = {2010},
+        location = {Austin, TX},
+        note = {Oral Presentation},
+        abstract = {Theano is a compiler for mathematical expressions in Python
+                  that combines the convenience of NumPy’s syntax with the
+                  speed of optimized native machine language. The user composes
+                  mathematical expressions in a high-level description that
+                  mimics NumPy’s syntax and semantics, while being statically
+                  typed and functional (as opposed to imperative). These
+                  expressions allow Theano to provide symbolic
+                  differentiation. Before performing computation, Theano
+                  optimizes the choice of expressions, translates them into C++
+                  (or CUDA for GPU), compiles them into dynamically loaded
+                  Python modules, all automatically. Common machine learning
+                  algorithms implemented with Theano are from 1.6× to 7.5×
+                  faster than competitive alternatives (including those
+                  implemented with C/C++, NumPy/SciPy and MATLAB) when compiled
+                  for the CPU and between 6.5× and 44× faster when compiled for
+                  the GPU. This paper illustrates how to use Theano, outlines
+                  the scope of the compiler, provides benchmarks on both CPU
+                  and GPU processors, and explains its overall design.}
+}
 
 Low Layer Neural Networks
 
