REPORT: Add citation for Keras.

--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -146,6 +146,16 @@ month={June},}
                   and GPU processors, and explains its overall design.}
 }
 
+@misc{Keras,
+        author = {Fran\c{c}ois Chollet},
+        title = {Keras: Teano-based Deep Learning Library},
+        year = {2015},
+        publisher = {GitHub},
+        journal = {GitHub repository},
+        howpublished = {\url{https://github.com/fchollet/keras}},
+        commit = {45c5f36399c08e71b8d5e64997b5a40cec50b92b}
+}
+
 Low Layer Neural Networks
 
 J. Roos, I. Lane, E. Botha, and G. P. Hancke. Using
