REPORT: Provide link to implementation.

--- a/report/report.tex
+++ b/report/report.tex
@@ -19,6 +19,7 @@
 \usepackage{aaai}
 \usepackage{amsmath}
 \usepackage{epstopdf}
+\usepackage{hyperref}
 
 \title{Energy Disaggregation}
 \author{Henry Agsten, Jacob Denson, Jesse Huard, Isabel McCarten, Morgan Redshaw}
@@ -295,6 +296,9 @@ accuracy as the ratio with summed up overall consumption.
 
 
 %TODO: Example?
+
+\subsection{Implementation}
+Our NILM and pre-processing implementations were written in Python, and are publicly available in our \href{https://github.com/CMPUT-466-551-ML-Project/NILM-Project}{NILM-Project} repository.
 
 \section{Discussion}
 
