--- a/report/report.tex
+++ b/report/report.tex
@@ -83,79 +83,39 @@ Some unsupervised approaches also exist that only use the aggregated energy of t
 
 %TODO: Should these be the approach name, or something else?
 
-\subsection{Approaches using no information about single device consumption}
-Unsupervised proceedings to disaggregate consumption data rely mainly on Hidden Markov Models. 
-Kolter \cite{Kolter} uses one Hidden Markov Model per device to describe its consumption and figure out at what time 
-it was active. He finds periods of activity, clusters similar ones and builds a Hidden Markov Model per device. 
+\subsection{Hidden Markov Models}
+Hidden Markov Models are one of the main categories of methods used for energy dissagregation.
+For example, \cite{Kolter} used one Hidden Markov Model per device to describe its consumption and figure out what time 
+it was active at. Kolter's algorithm finds periods of activity, clusters similar ones and builds one hidden Markov model per device. 
 Unfortunately the process to find these periods is not described in detail but seems to look for intervals when only 
-one device is active, what we want to enhance. He claims to reach precision values of over 90\% for some devices but since the recall values are not 
+one device is active. For some devices, \cite{} claims to reach precision values of over 90\%, but since the recall values are not 
 given it is hard to judge these results. 
+
 In contrast to this completely unsupervised approach, Parson starts with knowledge about the general device type and 
-gives a generic model for each device, which is fitted to the actual device. His biggest benefits are identifying the 
-devices without labeling them manually, since his generic models are labeled once and that he compares the house's device with 
-the set of models, so it is not necessary to know how many device are in the house. For devices with clearly distinguished patterns 
+produces a generic model for each device, which is fitted to the actual device. The generic and fitted models are difference hidden Markov models which have a second observation sequence representing the difference in power consumption between two time steps. The algorithm's biggest benefits are that it identifys the 
+devices without labeling them manually unlike most unsupervised methods in which the output dissagregated power consumption for some device has to be manually matched with a real-life device, and that it does not require the assumption that the number of devices in the house is known. For devices with clearly distinguished patterns 
 (e.g. fridges) Parson reaches F-scores up to 85\% while achieving results under 20\% for unstable devices (e.g. Microwaves).
 Even though his allocation of generic models and minute-wise measurements did not seem useful for us, his work led 
 us to the REDD-dataset which he used
 and to the idea of looking for timesteps when only one device changes its activity status.
 
-\subsection{Approaches using information about single device consumption}
 
 %TODO: Citations for this
-The most common supervised approaches use Hidden Markov Models as well as neural networks to estimate the power consumption 
-for each device.
 
-Well known is Parson's \cite{Parson} usage of one difference Hidden Markov Model (dHMM) per device to describe its 
-consumption and figure out at what time it was active.
-%TODO: Make sure is correct, and possibly cite this
-A dHMM extends traditional Hidden-Markov-Models by additional hidden variables for the difference from the previous 
-to current state. While this approach does not require the disaggregated energy signature per device, it does require 
-prior knowledge in the form of ???
+%Weiss \cite{Weiss} presumes the power consumption as a sequence of piecewise constant consumption levels those differences 
+%describe the typical consumption pattern of a distinct device. They identify devices by checking for characteristic 
+%differences 
+%between consumption changes and look for the most similar device pattern via neareast neighbor calculation. Since they get remarkable 
+%F-scores of 80\% and higher for some devices although the strong assumption we also have a look on signal for which this assumption holds.
 
-Latest progress was made by applying deep neural nets, where Kelly and Knottenbelt \cite{Kelly} used recurrent neural 
-nets with four hidden layers and achieved positive results for stable-behaving devices, but lacked accuracy for multi-stated 
-ones, leading to a F-score of 51\%. They also considered denoising autoencoders training one neural net per appliance. 
-The neural net takes the power consumption within a sliding window as input and separates the devices consumption from 
-the remaining power. Determining the window size by the usual activity time of the device they achieve an F-score of 70\%. 
-Both of their approaches use in the training phase the separated energy consumption for every device, ignoring possible inherent 
-relationships between different devices. Furthermore they identify that often signal reconstruction is not integral to applications.
-Therefore, they take their task to be identification of a begin time, end time, and overall energy usage of a specific device, 
-during the first cycle it is used.
-%They attempt to solve the problem via an amalgamation of Constitutional, Feed forward, and recurrent neural nets, combined with 
-%a denoising error\footnote{Viewing other data as `noise' may also cut out the holistic approach to the problem, removing the 
-%problem of global consistency.} and training on each device individually\footnote{This may ignore inherent relationships between 
-%different devices (though perhaps the neural networks account for this).
-%Perhaps a way to `double check' nets are correct may provide a more effective, holistic approach.}.
-%Due to the extensive data set one needs to train deep nets, the pair generates synthetic data by combining data with `noise' data\footnote{The data they generate is naive, and we will likely see performance increases from a more realistic generation of data, or through pre-training on large amounts of unlabelled data, then a less extensive training on real data.}.
-Weiss \cite{Weiss} presumes the power consumption as a sequence of piecewise constant consumption levels those differences 
-describe the typical consumption pattern of a distinct device. They identify devices by checking for characteristic 
-differences 
-between consumption changes and look for the most similar device pattern via neareast neighbor calculation. Since they get remarkable 
-F-scores of 80\% and higher for some devices although the strong assumption we also have a look on signal for which this assumption holds.
+%Both of their approaches use in the training phase the separated energy consumption for every device, ignoring possible inherent 
+%relationships between different devices. 
 
-
-%I did not understand how data was selected for training, but I do no it is normalized to have mean zero -- which may or may not reduce the ability to consistently identify features.
-​
-%Questions about the paper:
-%
-%\begin{enumerate}
-%	\item Using Convolutional Neural networks (Time Invariant).
-%	\item Ignoring all but first activation.
-%	\item Why does the algorithm ignore all but the first activation.
-%	\item Local to Global.
-%	\item NILMTK will be useful!
-%	\item Periodicity.
-%\end{enumerate}
-​
-%One neural network is trained per target appliance, based on real data and synthetically generated data.
-
-%**Another interesting aspect of the paper was how they used Denoising Autoencoders.
-​
-\subsubsection{Baranski's Algorithm}
+%\subsubsection{Baranski's Algorithm}
 
 \subsubsection{Neural Networks}
 ​
-Another approach that has been used in energy disaggregation is neural networks. For example, \cite{Ruzzelli} used simple, three-layer neural networks on the problem but used more information than we had about the appliances as input, including information about the current and voltage. We did not pursue this technique since, with just the power consumption as input, the main way to distinguish appliances is via patterns over time and a simple neural network has no way to do this. Another type of neural network which is an obvious choice for this problem and which we initially considered using is deep, recurrent networks. This method had been tried  before by \cite{Kelly} which experimented with using recurrent neural networks for energy disaggregation. Its net used a bidirectional long short term memory architecture \cite{Kelly}, which involves a memory unit with input, output, and feedback gates and is intended to overcome the problem of vanishing gradients over long sequences of inputs. Although the recurrent neural network produced reasonable results with recall and precision scores of 0.85 and 0.36, \cite{Kelly} experimented with several types of neural networks, and this one did not produce the best results. In particular it performed poorly on appliances with more than the two, on/off states. The neural network we used, which falls into a category called denoising autoencoders, was based on another of the nets \cite{Kelly} tested which outperformed the recurrent neural network.
+Another approach that has been used in energy disaggregation is neural networks. For example, \cite{Ruzzelli} used simple, three-layer neural networks on the problem but used more information than we had about the appliances as input, including information about the current and voltage. We did not pursue this technique since, with just the power consumption as input, the main way to distinguish appliances is via patterns over time and a simple neural network has no way to do this. Another type of neural network which is an obvious choice for this problem and which we initially considered using is deep, recurrent networks. This method had been tried  before by \cite{Kelly} which experimented with using recurrent neural networks for energy disaggregation. Its net used a bidirectional long short term memory architecture \cite{Kelly}, which involves a memory unit with input, output, and feedback gates and is intended to overcome the problem of vanishing gradients over long sequences of inputs. Although the recurrent neural network produced reasonable results with recall and precision scores of 0.85\% and 0.36\% and thus a F-score of 51\%, \cite{Kelly} experimented with several types of neural networks, and this one did not produce the best results. In particular it performed poorly on appliances with more than the two, on/off states. The neural network we used, which falls into a category called denoising autoencoders, was based on another of the nets \cite{Kelly} tested which outperformed the recurrent neural network. This paper, which discusses generating aggregate data by randomly recombining sections of the power consumption of single devices, is also the source of our idea to experiment with using synthetic power consumption data to deal with the problem that deep neural networks need very large amounts of data to train on \cite{Kelly}.
 
 
 \section{Our Stuff}
@@ -194,7 +154,7 @@ Having discussed denoising autoencoders in general, we move on to the details of
 
 We also standardized the input before running the neural network. Every input window had its mean subtracted. This does lose some information, but experiments, both our own and \cite{Kelly}'s, suggest that neural networks generalize better when each sequence is centered separately and that the gains from this outweigh loses from throwing away the information about the average value. Also every sample was divided by the standard deviation of a random sample of the input, and the target output was divided by the maximum power demand of the device to put it in the range of 0 to 1 \cite{Kelly}. 
 
-The paper comparing neural networks shows the denoising autoencoder as having a recall score of 94 and a precision score of 56 \cite{Kelly}. Before we ran our experiment based on just the on/off binary information, we ran our denoising autoencoder with the actual disaggregated power consumption as the target output on the REDD dataset attempting to get numbers close to these ones to test that our neural network was working correctly.
+The paper comparing neural networks shows the denoising autoencoder as having a recall score of 94\%, a precision score of 56\%, and thus an F-score of 70\% \cite{Kelly}. Before we ran our experiment based on just the on/off binary information, we ran our denoising autoencoder with the actual disaggregated power consumption as the target output on the REDD dataset attempting to get numbers close to these ones to test that our neural network was working correctly.
 
 
 \section{Preprocessing}
